--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <div class="middle-container">
             <div class="profile">
-              <img src="photos/circle.png" alt="my picture">
+              <img src="photos/circle.png" alt="my picture" class="pfp">
               <h2>Hello.</h2>
               <p>Skilled designer and front-end developer with expertise in creating captivating websites.</p>
             </div>
