--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <body> 
         <div class="top">
             <img class = "top-cloud" src="photos/cloud.png" alt="clouds">
-            <h1>I'm Batak</h1>
+            <h1>I'm Niomi</h1>
             <p>A <span class="des">des</span>igner</p>
             <img class = "bottom-cloud" src="photos/cloud.png" alt="clouds">
             <img class= "mountain" src="photos/mountain.png" alt="mountain">
